@@ -8,14 +8,22 @@ group = 'JavaConcepts'
 version = '1.0-SNAPSHOT'
 
 tasks.withType(JavaCompile) {
-    options.compilerArgs += "--enable-preview"
+    options.compilerArgs += [
+            '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED',
+            '--enable-preview'
+    ]
 }
+tasks.withType(JavaExec) {
+    jvmArgs += [
+            '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED',
+            '--enable-preview'
+    ]
+}
+
 tasks.withType(Test) {
     jvmArgs += "--enable-preview"
 }
-tasks.withType(JavaExec) {
-    jvmArgs += "--enable-preview"
-}
+
 repositories {
     gradlePluginPortal()
     mavenLocal()
